<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/periodDetailsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_dark"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text="@string/about"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/drop_shadow"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView92"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appAuthor"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/pieceMusicShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorName"
            android:textColor="@color/text_color"
            android:textSize="18dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/drop_shadow"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView92"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amused"
            android:textColor="@color/text_color" />

        <TextView
            android:id="@+id/pieceMusicShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutApp"
            android:textColor="@color/text_color"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>