<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pieceDetailsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_dark"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text="@string/pieces"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pieceAuthorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_bright"
        android:gravity="right"
        android:padding="5dp"
        android:text="" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/drop_shadow"
                android:orientation="vertical" >

                <WebView
                    android:id="@+id/pieceWebDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <Button
                android:id="@+id/pieceAboutAuthorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/drop_shadow_lp"
                android:text="@string/about_author_details" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drop_shadow"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:text="@string/music_content"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/drop_shadow"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieceMusicShape"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/pieceMusicShape"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView99"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieceMusicType"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/pieceMusicType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieceExecution"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/pieceExecution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieceTempo"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/pieceTempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieceDynamics"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/pieceDynamics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieceMood"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/pieceMood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </LinearLayout>
            
            <TextView
                android:id="@+id/textView98"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drop_shadow"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:text="@string/pieceFunFact"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/drop_shadow"
                android:orientation="vertical" >

                <WebView
                    android:id="@+id/pieceWebFunFacts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>