<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

     
    <TextView
        android:id="@+id/periodDetailsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_dark"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text="@string/periods"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center" />
    
    <Button
        android:id="@+id/piecesMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_shadow_lp"
        android:layout_margin="5dp"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text="@string/periods_more"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/text11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_shadow"
        android:layout_margin="5dp"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text="@string/authors_and_pieces"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />
    
    <ExpandableListView
        android:id="@+id/periodExList"
        android:background="@drawable/drop_shadow"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
 
</LinearLayout>