<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/authorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_dark"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp"
        android:text=""
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/drop_shadow"
                android:orientation="vertical" >

                <WebView
                    android:id="@+id/authorWebImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drop_shadow"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:text="@string/pieces"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />            
            
            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainText"
                android:layout_margin="@dimen/margin"
                android:divider="@color/pink_bright"
                android:dividerHeight="1px" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drop_shadow"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:text="@string/biography"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:color="@color/text_color" />

            <TextView
                android:id="@+id/authorBiography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/drop_shadow"
                android:text=""
                android:textColor="@color/text_color" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drop_shadow"
                android:paddingBottom="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="15dp"
                android:text="@string/funFacts"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:color="@color/text_color" />

            <TextView
                android:id="@+id/authorInterestingFacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:background="@drawable/drop_shadow"
                android:text=""
                android:textColor="@color/text_color" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>